--- a/aframe/examples/location-based/always-face-user/index.html
+++ b/aframe/examples/location-based/always-face-user/index.html
@@ -15,7 +15,7 @@
         arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'>
 
         <a-camera gps-camera='simulateLatitude: 51.049; simulateLongitude: -0.723' rotation-reader></a-camera>
-        <a-text value="This will always face the user." look-at="[gps-camera]" scale="75 75 75" gps-entity-place="latitude: 51.0491; longitude: -0.723;"></a-text>
+        <a-text value="This is tester text." look-at="[gps-camera]" scale="75 75 75" gps-entity-place="latitude: 51.0491; longitude: -0.723;"></a-text>
     </a-scene>
     <!-- Device Orientation Debug Script -->
     <script>
