--- a/aframe/examples/location-based/always-face-user/index.html
+++ b/aframe/examples/location-based/always-face-user/index.html
@@ -15,20 +15,11 @@
         arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'>
 
         <a-camera gps-camera='simulateLatitude: 51.049; simulateLongitude: -0.723' rotation-reader></a-camera>
-        <a-text value="This is the first line of text." look-at="[gps-camera]" scale="100 100 100" <!-- Larger size for the
-            first line -->
-            gps-entity-place="latitude: 51.0491; longitude: -0.723;"
-            color="#FF0000" <!-- Red color for the first line -->
-            font="https://cdn.aframe.io/fonts/mozillavr.ttf"
-            position="0 1 0">
-        </a-text>
-        <a-text value="This is the second line of text." look-at="[gps-camera]" scale="50 50 50" <!-- Smaller size for the
-            second line -->
-            gps-entity-place="latitude: 51.0691; longitude: -0.723;"
-            color="#0000FF" <!-- Blue color for the second line -->
-            font="https://cdn.aframe.io/fonts/mozillavr.ttf"
-            position="0 0.5 0">
-        </a-text>
+        <a-entity gps-entity-place="latitude: YOUR_LATITUDE; longitude: YOUR_LONGITUDE">
+            <a-text value="row 1\nrow 2" position="0 2 0" rotation="0 0 0" align="center" width="6" color="white">
+            </a-text>
+        </a-entity>
+
 
     </a-scene>
     <!-- Device Orientation Debug Script -->
