--- a/aframe/examples/location-based/always-face-user/index.html
+++ b/aframe/examples/location-based/always-face-user/index.html
@@ -15,7 +15,7 @@
         arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'>
 
         <a-camera gps-camera='simulateLatitude: 51.049; simulateLongitude: -0.723' rotation-reader></a-camera>
-        <a-entity gps-entity-place="latitude: YOUR_LATITUDE; longitude: YOUR_LONGITUDE">
+        <a-entity gps-entity-place="latitude: 51.049; longitude: -0.723">
             <a-text value="row 1\nrow 2" position="0 2 0" rotation="0 0 0" align="center" width="6" color="white">
             </a-text>
         </a-entity>
