--- a/aframe/examples/location-based/always-face-user/index.html
+++ b/aframe/examples/location-based/always-face-user/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -10,32 +11,10 @@
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
-    <a-scene
-        vr-mode-ui="enabled: false"
-        arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'>
+    <a-scene vr-mode-ui="enabled: false" arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'>
 
         <a-camera gps-camera='simulateLatitude: 51.049; simulateLongitude: -0.723' rotation-reader></a-camera>
-        <a-entity gps-entity-place="latitude: 51.049; longitude: -0.723">
-            <a-text value="row 1\nrow 2" position="0 2 0" rotation="0 0 0" align="center" width="6" color="white">
-            </a-text>
-        </a-entity>
-
-
+        <a-text value="This will always face the user." look-at="[gps-camera]" scale="75 75 75"
+            gps-entity-place="latitude: 51.0491; longitude: -0.723;"></a-text>
     </a-scene>
-    <!-- Device Orientation Debug Script -->
-    <script>
-        if (window.DeviceOrientationEvent) {
-            window.addEventListener('deviceorientation', function (event) {
-                if (event.alpha !== null) {
-                    console.log('Alpha: ' + event.alpha);
-                    console.log('Beta: ' + event.beta);
-                    console.log('Gamma: ' + event.gamma);
-                } else {
-                    console.log('event.alpha === null');
-                }
-            }, true);
-        } else {
-            console.log("DeviceOrientationEvent is not supported by this browser.");
-        }
-    </script>
 </body>
